Improve R fig scripts

--- a/Process_1_GEE_Python_Classification/BackGround_modules/Class_1_Make_fourier_imgs.ipynb
+++ b/Process_1_GEE_Python_Classification/BackGround_modules/Class_1_Make_fourier_imgs.ipynb
@@ -2,23 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import ee\n",
     "import datetime\n",
-    "import folium\n",
     "import os\n",
+    "import itertools\n",
+    "import sys\n",
+    "import collections\n",
+    "\n",
     "from pprint import pprint\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import geemap"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,73 +58,75 @@
     "    1) start_date and end_date is a string like '2017-01-01'.\n",
     "    2) hamornics = 3\n",
     "    3) Normalized_Index = ['NDVI','NDBI','EVI']\n",
+    "    4) area is the research area, which should be a ee.Feature/Collection/Geometry\n",
     "\n",
     "                \n",
     "                \n",
     "    __________________________An example of how to use this class____________________\n",
     "    \n",
-    "    test = Make_Fourier(start_date='2017-01-01',end_date='2019-12-31')\n",
+    "    test = Make_Fourier(start_date ='2017-01-01',\n",
+    "                        end_date   ='2019-12-31',\n",
+    "                        area = ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain_Python/Boundary_shp/North_China_Plain_Boundary\"))\n",
     "\n",
     "    test.Stp_1_Create_hamonic_names()\n",
     "    test.Stp_2_Add_harmonics()\n",
     "    test.Stp_3_Harmonic_fit()\n",
     "    \n",
-    "    # Step_4 is not necessary for the analysis.\n",
-    "    #test.Stp_4_Make_a_figure()\n",
     "    \n",
     "    #____________OUT_PUT______________\n",
-    "    \n",
+    "\n",
     "    # get the Fourier img. the Fourier img has been converted to integer\n",
     "    # by -->multiply(1000).toInt16()\n",
     "    Fourier_img = test.harmonicTrendCoefficients\n",
-    "    \n",
+    "\n",
     "    # get the Residule img.the Residule_img img has been converted to integer\n",
     "    # by -->multiply(1000).toInt16()\n",
     "    Residule_img = test.harmonicTrendResidule\n",
-    "    \n",
-    "    # get discrete original/fitted Normalized value\n",
+    "\n",
+    "    # get discrete original/fitted Normalized value. The value has been scaled \n",
+    "    # by 1000\n",
     "    # for example\n",
     "    Original_NDVI_series = test.harmonicLandsat.select(['NDVI'])\n",
     "    Fitted_NDVI_series   = test.fittedHarmonic['NDVI']\n",
+    "\n",
+    "    # get the amplitude_phase img. The value has been scaled \n",
+    "    # by 1000\n",
+    "    Amplitude_Phase_img = test.Amplitude_Phase_img\n",
     "    ____________________________________________________________________________________\n",
     "    '''    \n",
     "   \n",
-    "    def __init__(self,start_date,end_date,harmonics = 3,Normalized_Index = ['NDVI','NDBI','EVI']):\n",
-    "        \n",
-    "        self.start_date = ee.Date(start_date)\n",
-    "        self.end_date = ee.Date(end_date)\n",
-    "        self.harmonics = harmonics\n",
-    "        \n",
-    "        self.year_name = str(self.start_date.get('Year').getInfo()) + '_' + str(self.end_date.get('Year').getInfo())\n",
+    "    def __init__(self,start_date,end_date,area = ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain_Python/Boundary_shp/North_China_Plain_Boundary\"),\n",
+    "                 harmonics = 3,Normalized_Index = ['NDVI','NDBI','EVI']):\n",
+    "\n",
+    "        self.harmonics = harmonics        \n",
+    "        year_name = start_date[:4] + '_' + end_date[:4]\n",
     "        self.Normalized_Index = Normalized_Index\n",
     "        \n",
-    "        self.North_China_Plain_Boundary = ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain_Python/Boundary_shp/North_China_Plain_Boundary\")\n",
-    "        \n",
     "        #______________________________Condition to define the right landsat img collecion__________________________\n",
-    "        if self.end_date.get('year').getInfo() <= 2010:\n",
-    "            self.Landsat_img = ee.ImageCollection(\"LANDSAT/LT05/C01/T1_TOA\")\n",
+    "        if int(start_date[:4]) <= 2010:\n",
+    "            Landsat_img = ee.ImageCollection(\"LANDSAT/LT05/C01/T1_TOA\")\n",
     "            self.ND_formula = {'NDVI':['B4','B3'],\n",
     "                          'NDBI':['B5','B4'],\n",
     "                          'EVI':\"2.5 * ((b('B4')-b('B3'))*1.0 / (b('B4')*1.0 + 6.0 * b('B3') - 7.5 * b('B1') + 1.0))\"}\n",
     "\n",
-    "        elif self.end_date.get('year').getInfo() <= 2013:\n",
-    "            self.Landsat_img = ee.ImageCollection(\"LANDSAT/LE07/C01/T1_TOA\")\n",
+    "        elif int(start_date[:4]) <= 2013:\n",
+    "            Landsat_img = ee.ImageCollection(\"LANDSAT/LE07/C01/T1_TOA\")\n",
     "            self.ND_formula = {'NDVI':['B4','B3'],\n",
     "                          'NDBI':['B5','B4'],\n",
     "                          'EVI':\"2.5 * ((b('B4')-b('B3'))*1.0 / (b('B4')*1.0 + 6.0 * b('B3') - 7.5 * b('B1') + 1.0))\"}\n",
     "\n",
     "        else:\n",
-    "            self.Landsat_img = ee.ImageCollection(\"LANDSAT/LC08/C01/T1_TOA\")\n",
+    "            Landsat_img = ee.ImageCollection(\"LANDSAT/LC08/C01/T1_TOA\")\n",
     "            self.ND_formula = {'NDVI':['B5','B4'],\n",
     "                          'NDBI':['B6','B5'],\n",
     "                          'EVI':\"2.5 * ((b('B5')-b('B4'))*1.0 / (b('B5')*1.0 + 6.0 * b('B4') - 7.5 * b('B2') + 1.0))\"}\n",
-    "        #_____________________________________________________________________________________________________________\n",
-    "        \n",
-    "        self.Landsat_img_be_analized = self.Landsat_img.filterBounds(self.North_China_Plain_Boundary)\\\n",
-    "                                                  .filterDate(self.start_date,self.end_date)\\\n",
-    "                                                  .map(lambda img: ee.Image(img.clip(self.North_China_Plain_Boundary)))\n",
     "            \n",
-    "        print(f'Analyzing the images of {self.year_name}')\n",
+    "        # get the landsat imgs as raw input data\n",
+    "        self.Landsat_img_be_analized = Landsat_img.filterBounds(area)\\\n",
+    "                                                  .filterDate(start_date,end_date)\\\n",
+    "                                                  .map(lambda img: ee.Image(img.clip(area)))\n",
+    "            \n",
+    "        print(f'Analyzing the images of {year_name}')\n",
     "    \n",
     "    \n",
     "    def Stp_1_Create_hamonic_names(self):\n",
@@ -194,20 +209,29 @@
     "        \n",
     "        harmonicTrendCoefficients_list = []\n",
     "        residule_list = []\n",
+    "        \n",
     "        fittedHarmonic_dict = {}\n",
+    "        Amplitude_Phase = []\n",
     "\n",
     "        for idx in self.Normalized_Index:\n",
     "\n",
-    "            # Define varibles required in later session.\n",
+    "            #_____________________Step_1_Define varibles required in later session__________________________\n",
+    "            \n",
     "            independents = [s for s in self.Independents_variable_names if idx in s]\n",
     "            dependent = idx\n",
     "            fit_name = 'fitted_' + idx\n",
-    "\n",
+    "            \n",
+    "            \n",
+    "            #_____________________Step_2_Harmonic_Fit__________________________\n",
+    "            \n",
     "            # Using linearRgression to perform the Fourier Transformation\n",
     "            # The output of the regression reduction is a [(n+2) x 1] array image, where n is harmonics.\n",
     "            harmonicTrend = self.harmonicLandsat.select(ee.List(self.sinuate_and_constant).add(dependent)) \\\n",
     "                                .reduce(ee.Reducer.linearRegression(ee.List(self.sinuate_and_constant).length(), 1)) \n",
-    "\n",
+    "            \n",
+    "            \n",
+    "            #_____________________Step_3_Get_[Coefficients_img]_[fit_img]_and_[residul_img]__________________________\n",
+    "            \n",
     "            # Turn the array image into a multi-band image of coefficients.\n",
     "            # 1) get the coefficients\n",
     "            harmonicTrendCoefficients = harmonicTrend.select('coefficients').arrayProject([0]).arrayFlatten([independents])\n",
@@ -225,126 +249,49 @@
     "            # add the result into list\n",
     "            residule_list.append(harmonicTrendResidules)\n",
     "            harmonicTrendCoefficients_list.append(harmonicTrendCoefficients)\n",
+    "            \n",
+    "            \n",
+    "            #_____________________Step_4_Compute_the_Amplitude_and_Phases__________________________\n",
+    "            \n",
+    "            # initiate a list to hold each bands from amp/phs\n",
+    "            amp_phs_list = []\n",
+    "            \n",
+    "            # loop throught each cos/sin bands\n",
+    "            for i in range(1,self.harmonics+1):\n",
+    "                \n",
+    "                # get the names\n",
+    "                cos = f'{idx}_cos_{i}'\n",
+    "                sin = f'{idx}_cos_{i}'\n",
+    "                name_amp = f'{idx}_Amplitude_{i}'\n",
+    "                name_phs = f'{idx}_Phase_{i}'\n",
+    "                \n",
+    "                # compute the amplitude and phase\n",
+    "                amp = harmonicTrendCoefficients.select(cos).hypot(harmonicTrendCoefficients.select(sin)).rename(name_amp)\n",
+    "                phs = harmonicTrendCoefficients.select(cos).atan2(harmonicTrendCoefficients.select(sin)).rename(name_phs)\n",
+    "                \n",
+    "                # add amp and phs to list\n",
+    "                amp_phs_list.append(amp)\n",
+    "                amp_phs_list.append(phs)\n",
+    "            \n",
+    "            # stack amp_phs to a multiband img, note here need to add the constant and t coefficients\n",
+    "            # also, multiply by 1000 and convert the img to int\n",
+    "            amp_phs_img = ee.Image([amp_phs_list] + \n",
+    "                                   [harmonicTrendCoefficients.select(f'{idx}_constant')] + \n",
+    "                                   [harmonicTrendCoefficients.select(f'{idx}_t')]).multiply(1000).toInt16()\n",
     " \n",
+    "            Amplitude_Phase.extend([amp_phs_img])\n",
+    "    \n",
+    "    \n",
+    "        #_____________________Step_5_Store_result_to_class_attributes__________________________   \n",
     "        \n",
     "        # multiply all computated by 1000 and convet them into a Signed-16 interge to reduce space.\n",
     "        self.harmonicTrendCoefficients = ee.Image(harmonicTrendCoefficients_list).multiply(1000).toInt16()\n",
     "        self.harmonicTrendResidule     = ee.Image(residule_list).multiply(1000).toInt16()\n",
+    "        \n",
+    "        # store thefitted and amp_phs img to dict\n",
     "        self.fittedHarmonic            = fittedHarmonic_dict\n",
-    "        \n",
-    "        \n",
-    "    def Stp_4_Make_a_figure(self,point = (116.3, 38.5)):\n",
-    "        \n",
-    "        # Select a arbitrary point in the map.\n",
-    "        point = ee.Geometry.Point(point)\n",
-    "        \n",
-    "        # Define the original ND and fitted ND variable\n",
-    "        original_NDVI = self.fittedHarmonic_list[0].select(['NDVI']).getRegion(point,30).getInfo()\n",
-    "        fitted_NDVI = self.fittedHarmonic_list[0].select(['fitted_NDVI']).getRegion(point,30).getInfo()\n",
-    "        \n",
-    "        original_NDBI = self.fittedHarmonic_list[1].select(['NDBI']).getRegion(point,30).getInfo()\n",
-    "        fitted_NDBI = self.fittedHarmonic_list[1].select(['fitted_NDBI']).getRegion(point,30).getInfo()\n",
-    "        \n",
-    "        original_EVI = self.fittedHarmonic_list[2].select(['EVI']).getRegion(point,30).getInfo()\n",
-    "        fitted_EVI = self.fittedHarmonic_list[2].select(['fitted_EVI']).getRegion(point,30).getInfo()\n",
-    "        \n",
-    "        # put  value into a pd.dataframe and convert the time to a normal format\n",
-    "        original_ndvi_df = pd.DataFrame(original_NDVI[1:],columns = original_NDVI[0])\n",
-    "        fitted_ndvi_df = pd.DataFrame(fitted_NDVI[1:],columns = fitted_NDVI[0])\n",
-    "        \n",
-    "        original_ndbi_df = pd.DataFrame(original_NDBI[1:],columns = original_NDBI[0])\n",
-    "        fitted_ndbi_df = pd.DataFrame(fitted_NDBI[1:],columns = fitted_NDBI[0])\n",
-    "        \n",
-    "        original_evi_df = pd.DataFrame(original_EVI[1:],columns = original_EVI[0])\n",
-    "        fitted_evi_df = pd.DataFrame(fitted_EVI[1:],columns = fitted_EVI[0])\n",
-    "        \n",
-    "        # Add time to fitted_ndvi_df since it has the same time stamp with NDVI.\n",
-    "        ndvi_time = [datetime.datetime.fromtimestamp(i/1000) for i in original_ndvi_df['time']]\n",
-    "        fitted_ndvi_df['time'] = ndvi_time\n",
-    "        \n",
-    "        ndbi_time = [datetime.datetime.fromtimestamp(i/1000) for i in original_ndbi_df['time']]\n",
-    "        fitted_ndbi_df['time'] = ndbi_time\n",
-    "        \n",
-    "        evi_time = [datetime.datetime.fromtimestamp(i/1000) for i in original_evi_df['time']]\n",
-    "        fitted_evi_df['time'] = evi_time\n",
-    "        \n",
-    "        # Plot the original and fitted value to inspect the outcome.\n",
-    "        fig_orginal_ndvi = original_ndvi_df['NDVI'].plot(legend ='NDVI' )\n",
-    "        fig_fit_ndvi = fitted_ndvi_df['fitted_NDVI'].plot(legend ='fitted_NDVI')\n",
-    "        \n",
-    "        fig_orginal_ndbi = original_ndbi_df['NDBI'].plot(legend ='NDBI' )\n",
-    "        fig_fit_ndbi = fitted_ndbi_df['fitted_NDBI'].plot(legend ='fitted_NDBI')\n",
-    "        \n",
-    "        fig_orginal_evi = original_evi_df['EVI'].plot(legend ='EVI' )\n",
-    "        fig_fit_evi = fitted_evi_df['fitted_EVI'].plot(legend ='fitted_EVI')\n",
-    "        \n",
-    "        return [[fig_orginal_ndvi,fig_fit_ndvi],[fig_orginal_ndbi,fig_fit_ndbi],[fig_orginal_evi,fig_fit_evi]]\n",
-    "        \n",
-    "        "
+    "        self.Amplitude_Phase_img       = ee.Image(Amplitude_Phase)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
