--- a/Process_1_GEE_Python_Classification/Sub_Process_7_Classification_on_img/Step_1_Classification_random_split_10_layers.ipynb
+++ b/Process_1_GEE_Python_Classification/Sub_Process_7_Classification_on_img/Step_1_Classification_random_split_10_layers.ipynb
@@ -325,6 +325,117 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "################ Some extra export for fig making, not useful for this classification ################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exporting Fourier_2008_2010 successful!\n",
+      "Exporting Normalized_2008_2010 successful!\n",
+      "Exporting False_color_2008_2010 successful!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# # get the observation rectagles\n",
+    "# # clip = ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain_Python/Boundary_shp/Observation_Rectangle_Full\")\n",
+    "\n",
+    "# # loop through each year to get target imgs\n",
+    "# for year,img in zip(year_name,Stack_img):\n",
+    "    \n",
+    "#     # get imgs\n",
+    "#     Fourier = img.select(['NDBI_cos_1','EVI_sin_2','NDVI_sin_2']).clip(clip)\n",
+    "#     Normalized = img.select(['Mean_NDVI','Mean_NDBI','Mean_EVI']).clip(clip)\n",
+    "    \n",
+    "#     # Landsat 8 has different flase color composite compare to 5/7\n",
+    "#     if int(year[-4:]) <= 2013 :\n",
+    "#         False_color = img.select(['B4','B3','B2']).clip(clip)\n",
+    "#     else:\n",
+    "#         False_color = img.select(['Landsat_B5','Landsat_B4','Landsat_B3']).clip(clip)\n",
+    "        \n",
+    "        \n",
+    "#     # stack imgs together for export    \n",
+    "#     imgs = [Fourier,Normalized,False_color] \n",
+    "#     img_names = ['Fourier','Normalized','False_color'] \n",
+    "    \n",
+    "#     # export to CloudStorage\n",
+    "#     for img,name in zip(imgs,img_names):\n",
+    "        \n",
+    "#         # construcnt img name for export\n",
+    "#         img_name = f'{name}_{year}'\n",
+    "        \n",
+    "#         # export\n",
+    "#         task = ee.batch.Export.image.toCloudStorage(image = img,\n",
+    "#                                                     description=img_name,\n",
+    "#                                                     bucket='north_china_plain',\n",
+    "#                                                     fileNamePrefix=img_name,\n",
+    "#                                                     region=clip,\n",
+    "#                                                     scale=30,\n",
+    "#                                                     maxPixels=int(1e13),\n",
+    "#                                                     skipEmptyTiles=True) \n",
+    "    \n",
+    "#         task.start()\n",
+    "        \n",
+    "#         # print out the process.\n",
+    "#         print(f'Exporting {img_name} successful!')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
