Compare the reference maps

--- a/Process_1_GEE_Python_Classification/Sub_Process_1_Data_preparation_Fourier_transformation/Step_2_Create_Fourier_imgs.ipynb
+++ b/Process_1_GEE_Python_Classification/Sub_Process_1_Data_preparation_Fourier_transformation/Step_2_Create_Fourier_imgs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        " ('2017-01-01', '2019-12-31')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -215,36 +215,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# here use the clip to export part of the reserach area, change to full area if was for whole area analysis\n",
-    "clip = ee.Geometry.MultiPolygon(\n",
-    "        [[[[116.39831522048985, 39.46687647601767],\n",
-    "           [116.39831522048985, 38.80005028254205],\n",
-    "           [117.23876932205235, 38.80005028254205],\n",
-    "           [117.23876932205235, 39.46687647601767]]],\n",
-    "         [[[113.62521238026795, 35.51176132219713],\n",
-    "           [113.62521238026795, 35.11731413601196],\n",
-    "           [114.14294309315858, 35.11731413601196],\n",
-    "           [114.14294309315858, 35.51176132219713]]],\n",
-    "         [[[120.34909146470943, 36.97156109000749],\n",
-    "           [120.34909146470943, 36.74080712198658],\n",
-    "           [120.6992806736938, 36.74080712198658],\n",
-    "           [120.6992806736938, 36.97156109000749]]],\n",
-    "         [[[116.84493735483619, 30.925303237941304],\n",
-    "           [116.84493735483619, 30.925303237941304],\n",
-    "           [116.84493735483619, 30.925303237941304],\n",
-    "           [116.84493735483619, 30.925303237941304]]],\n",
-    "         [[[116.79961875132057, 30.93708312491555],\n",
-    "           [116.79961875132057, 30.73308670996162],\n",
-    "           [117.07977011850807, 30.73308670996162],\n",
-    "           [117.07977011850807, 30.93708312491555]]]])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -252,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -264,27 +234,153 @@
     }
    ],
    "source": [
-    "for year,img in Amplitude_Phase_imgs.items():\n",
+    "for year,img in Fourier_imgs.items():\n",
     "\n",
     "    # construct the export name    \n",
     "    export_name = f'Amplitude_Phase_{year}'\n",
     "    \n",
     "    # here only export the year of 2008-2010, change to full years for fully analysis\n",
     "    if year == '2008_2010':\n",
+    "        \n",
+    "        target_img = img.clip(North_China_Plain)\n",
+    "        \n",
     "        # construct the export task\n",
-    "        task = ee.batch.Export.image.toCloudStorage(image = img,\n",
-    "                                                    description=export_name,\n",
-    "                                                    bucket='north_china_plain',\n",
-    "                                                    fileNamePrefix=export_name,\n",
-    "                                                    region= clip,\n",
-    "                                                    scale=30,\n",
-    "                                                    maxPixels=int(1e13),\n",
-    "                                                    skipEmptyTiles=True)\n",
-    "        task.start()\n",
+    "#         task = ee.batch.Export.image.toCloudStorage(image = target_img,\n",
+    "#                                                     description=export_name,\n",
+    "#                                                     bucket='north_china_plain',\n",
+    "#                                                     fileNamePrefix=export_name,\n",
+    "#                                                     region= clip,\n",
+    "#                                                     scale=30,\n",
+    "#                                                     maxPixels=int(1e13),\n",
+    "#                                                     skipEmptyTiles=True)\n",
+    "#         task.start()\n",
     "\n",
     "        # print out the process\n",
     "        print(export_name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Export existing img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year = f'2008_2010'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fourier img\n",
+    "Fourier = ee.Image(f\"users/wang8052664/North_China_Plain/Fourier_imgs/Fourier_img_{year}_harmonic_3\")\\\n",
+    "                      .select([\"NDBI_cos_1\",\"EVI_sin_2\",\"NDVI_sin_2\"])\n",
+    "\n",
+    "# Landsat_flase_color\n",
+    "False_color = ee.Image(f\"users/wang8052664/Cloud_Free_Img/Landsat_cloud_free_{year}\").select(['B4','B3','B2'])\n",
+    "\n",
+    "#get normalized imgs\n",
+    "NDVI = ee.Image(f'users/wensomone666/Jinzhu/Mean_NDVI/Year_{year}_Mean_NDVI').rename('NDVI')\n",
+    "NDBI = ee.Image(f'users/wensomone666/Jinzhu/Mean_NDVI/Year_{year}_Mean_NDBI').rename('NDBI')\n",
+    "EVI =  ee.Image(f'users/wensomone666/Jinzhu/Mean_NDVI/Year_{year}_Mean_EVI').rename('EVI')\n",
+    "Normalized_img = ee.Image([NDVI,NDBI,EVI])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set the visulization parameters\n",
+    "Landsat_1990_2010 = {\"opacity\":1,\"bands\":[\"B3\",\"B2\",\"B1\"],\"min\":10,\"max\":39.4,\"gamma\":1},\n",
+    "Landsat_2011_2019 = {\"opacity\":1,\"bands\":[\"B4\",\"B3\",\"B2\"],\"min\":10,\"max\":44.8,\"gamma\":1},\n",
+    "Normalized_1990_2010 = {\"opacity\":1,\"bands\":[\"NDVI\",\"NDBI\",\"EVI\"],\"min\":-15,\"max\":25,\"gamma\":1},\n",
+    "Normalized_2011_2013 = {\"opacity\":1,\"bands\":[\"NDBI\",\"NDVI\",\"EVI\"],\"min\":-18.6,\"max\":40.6,\"gamma\":1},\n",
+    "Normalized_2014_2019 = {\"opacity\":1,\"bands\":[\"NDVI\",\"NDBI\",\"EVI\"],\"min\":-15,\"max\":50,\"gamma\":1},\n",
+    "Fourier_VIS = {\"opacity\":1,\"bands\":[\"NDBI_cos_1\",\"EVI_sin_2\",\"NDVI_sin_2\"],\"min\":-106,\"max\":158,\"gamma\":1}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fourier_2008_2010\n",
+      "False_color_2008_2010\n",
+      "Normalized_img_2008_2010\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name,img in zip(['Fourier','False_color','Normalized_img'],\n",
+    "                     [Fourier,False_color,Normalized_img]):\n",
+    "    \n",
+    "    # define the export name\n",
+    "    export_name = f'{name}_{year}'\n",
+    "    \n",
+    "    # export\n",
+    "    task = ee.batch.Export.image.toCloudStorage(image = Normalized_img,\n",
+    "                                                description=export_name,\n",
+    "                                                bucket='north_china_plain',\n",
+    "                                                fileNamePrefix=export_name,\n",
+    "                                                region= North_China_Plain.geometry().bounds(),\n",
+    "                                                scale=30,\n",
+    "                                                maxPixels=int(1e13),\n",
+    "                                                skipEmptyTiles=True)\n",
+    "    task.start()\n",
+    "\n",
+    "    # print the process\n",
+    "    print(export_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
