fig modification/ temporal iteration determined by built_up area

--- a/Process_2_Temporal_Check/Step_2_Area_Accuracy_Comparision.ipynb
+++ b/Process_2_Temporal_Check/Step_2_Area_Accuracy_Comparision.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
     "\n",
     "for t in year_avaliable:  \n",
     "  \n",
-    "    band = ee.ImageCollection([ee.Image(s) for s in str(Global_urban_Liu_1990_2015.stdout).split('\\\\r\\\\n') if str(t) in s]).mosaic()    \n",
+    "    band = ee.ImageCollection([ee.Image(s).toInt8() for s in str(Global_urban_Liu_1990_2015.stdout).split('\\\\r\\\\n') if str(t) in s]).mosaic()    \n",
     "    band = band.setMulti(['Source','Global Urban Liu','Year',t,'Scale',30])\n",
     "    \n",
     "    Global_urban_Liu_bands.append(ee.Image(band))\n",
@@ -320,12 +320,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import the Global_Land_Cover_30\n",
-    "path_GLC = 'users/wangjinzhulala/North_China_Plain_Python/Global_land_cover_30_China'\n",
+    "path_GLC = 'users/wangjinzhulala/North_China_Plain_Python/Reference_classification/Global_land_cover_30_China'\n",
     "\n",
     "# get the avaliable years of this dataset\n",
     "year_avaliable = [2000,2010,2020]\n",
@@ -336,13 +336,10 @@
     "\n",
     "for t in year_avaliable: \n",
     "    \n",
-    "    img_tiles = subprocess.run(f'earthengine ls {path_GLC}/{t}', stdout=subprocess.PIPE).stdout\n",
-    "  \n",
-    "    band = ee.ImageCollection([ee.Image(s) for s in img_tiles.decode().split('\\r\\n') if str(t) in s]).mosaic()    \n",
-    "    band_built = band.eq(80)\n",
-    "    band_built = band_built.setMulti(['Source','Global Landcover 30','Year',t,'Scale',30])\n",
+    "    band = ee.Image(f\"{path_GLC}/GLC_30_{t}\").eq(80)\n",
+    "    band = band.setMulti(['Source','Global Landcover 30','Year',t,'Scale',30])\n",
     "    \n",
-    "    Global_Land_Cover_30_bands.append(ee.Image(band_built))\n",
+    "    Global_Land_Cover_30_bands.append(ee.Image(band))\n",
     "    \n",
     "    \n",
     "#_________remap_the_pixel_value_for_temporal_comparasion______\n",
@@ -374,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,20 +585,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My_img_re has been exported to GS!\n",
-      "GAIA_re has been exported to GS!\n",
-      "Global_urban_Liu_re has been exported to GS!\n",
-      "GHSL_re has been exported to GS!\n",
-      "MODIS_re has been exported to GS!\n",
-      "ESACCI_re has been exported to GS!\n",
-      "Global_urban_He_re has been exported to GS!\n",
       "Global_Land_Cover_30_bands_re has been exported to GS!\n"
      ]
     }
@@ -947,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1162,7 @@
        "[742 rows x 6 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1359,7 @@
        "[106 rows x 7 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
